--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ ndarray-linalg = { version = "0.17.0", features = ["openblas-static"] }
 num = { version = "0.4.3", features = ["serde"] }
 num-traits = "0.2.19"
 rand = "0.9.2"
+rand_chacha = "0.9.0"
+rand_distr = "0.5.1"
 regex = "1.11.1"
 rug = { version = "1.27.0", features = ["float", "complex"] }
 serde = { version = "1.0.219", features = ["derive"] }
