--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,9 @@ approx = "0.5.1"
 dyn-clone = "1.0.19"
 fastrand = "2.0"
 float-cmp = "0.10.0"
-ndarray = "0.17.1"
+ndarray = { version = "0.17.1", features = ["blas", "matrixmultiply-threading", "rayon", "serde"] }
 ndarray-linalg = { version = "0.18.0", features = ["openblas-static"] }
+ndarray-rand = "0.16.0"
 num = { version = "0.4.3", features = ["serde"] }
 num-traits = "0.2.19"
 rand = "0.9.2"
