--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ ndarray = { version = "0.17.1", features = ["blas", "matrixmultiply-threading", 
 ndarray-linalg = { version = "0.18.0", features = ["openblas-static"] }
 ndarray-rand = "0.16.0"
 num = { version = "0.4.3", features = ["serde"] }
+num-complex = "0.4.6"
 num-traits = "0.2.19"
 rand = "0.9.2"
 rand_chacha = "0.9.0"
@@ -27,6 +28,7 @@ rug = { version = "1.27.0", features = ["float", "complex"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 simple-error = "0.3.1"
+twofloat = "0.8.4"
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
